hack show pages

--- a/css/index.styl
+++ b/css/index.styl
@@ -258,7 +258,7 @@ html,body
           a
             position: absolute 
             right: 10px
-            bottom: 0px
+            top: 0px
             color: black
             font-size: 12px
             padding: 0px
