--- a/css/index.styl
+++ b/css/index.styl
@@ -51,7 +51,7 @@ html,body
           margin-bottom: 0px
           padding-bottom: 0px
           font-weight: 200
-          text-shadow: 0px 1px 6px rgba(0,0,0,5)
+          text-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
         p
           font-size: 14px
           margin: 0px
