--- a/css/index.styl
+++ b/css/index.styl
@@ -56,6 +56,8 @@ html,body
           font-size: 14px
           margin: 0px
           padding: 0px
+          font-family: "Open Sans"
+          font-weight: 600
       .left 
         float:left 
       .right
@@ -68,6 +70,7 @@ html,body
         font-weight: 700
         margin-right: 20px
         font-size: 12px
+        text-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
     .bottom
       background-color: lightColor
       width: 1170px
@@ -89,9 +92,15 @@ html,body
       padding: 25px 83px 25px 83px
     .left 
       float:left 
+
     .right
       float:right
-      margin-top: 12px
+      margin-top: 11px
+      span,a
+        color: #9E9E9E
+        font-weight: 700
+        font-family: "Open Sans"
+        font-size: 10px
     .nav
       display: inline-block
       vertical-align: middle
@@ -113,16 +122,37 @@ html,body
         margin-right: auto
         width: 642px
         font-size: 12px
+
+      .button
+        border-box()
+        background-color: #1F1F1F
+        border-radius(4px)
+        padding: 15px 20px 15px 20px
+        color: white
+        width: 235px
+        height: 50px
+        margin-left: auto
+        margin-right: auto
+        margin-top: 30px
+        cursor: pointer
+        font-family: "Open Sans"
+        font-weight: 600
+        line-height: 17px
+      
+      .button:hover
+        background-color: black
+
+
       ul
-        padding: 64px 0px
+        padding: 40px 0px
         width: 100%
         li
           width: 240px
           display: inline-block
           vetical-align: top
           text-align: center
-          margin: 0px 50px 72px 0px
-
+          padding: 0px
+          margin:  20px 40px 72px 40px
           img 
             margin: 0px 0px 10px 0px
             padding:0px
@@ -195,16 +225,7 @@ html,body
         p
           font-weight: 100
           font-size: 18px
-        .button
-          border-box()
-          background-color: #DEDEDE
-          border-radius(2px)
-          padding: 15px 55px 15px 55px
-          color: #212121
-          width: 235px
-          height: 50px
-          margin-left: auto
-          margin-right: auto
+        
 
   .hacksController
     z-index: 0
@@ -237,12 +258,14 @@ html,body
             padding:0px
             display: inline-block
             vertical-align: top
+            width: 300px
           .info
             display: inline-block
             vertical-align: top
-            max-height: 214px
+            height: 214px
             overflow-y: hidden
             text-overflow: ellipsis
+            position:realtive 
             h2
               font-size: 13px
               font-weight: 600
@@ -255,13 +278,27 @@ html,body
 
               line-height: 20px
               font-family: "Open Sans"
-          a
-            position: absolute 
-            right: 10px
-            top: 0px
-            color: black
-            font-size: 12px
-            padding: 0px
+            a
+              position:absolute
+              border-box()
+              background-color: #1F1F1F
+              border-radius(4px)
+              padding: 10px
+              color: white
+              width: 90px
+              height: 24px
+              right: 32px
+              cursor: pointer
+              font-family: "Open Sans"
+              font-weight: 600
+              line-height: 2px
+              font-size: 12px
+              bottom:13px 
+              text-align: center
+            a:hover 
+              background-color:black
+
+            
 
   .hackShowController
     z-index: 0
@@ -281,6 +318,8 @@ html,body
         font-size: 12px
         font-family: "Open Sans"
         line-height: 18px
+        margin-top: -5px
+        padding:0px
       img 
         margin: 50px 0px 35px 0px
         width: 970px
