--- a/css/index.styl
+++ b/css/index.styl
@@ -58,6 +58,10 @@ html,body
           padding: 0px
           font-family: "Open Sans"
           font-weight: 600
+        img
+          position: relative
+          top: 6px
+          left: 10px
       .left 
         float:left 
       .right
@@ -225,7 +229,59 @@ html,body
         p
           font-weight: 100
           font-size: 18px
-        
+
+
+  .HowToController
+    z-index: 0
+    >.content 
+      border-box()
+      z-index: 2
+      padding : 70px 100px 140px 100px
+      text-align: center
+      h2,h1
+        font-weight: 200
+        font-size: 32px
+        margin-bottom: 10px
+      p
+        margin-left:auto
+        margin-right: auto
+        width: 642px
+        font-size: 12px
+        font-family: "Open Sans"
+        line-height: 18px
+      img 
+        margin: 50px 0px 35px 0px
+      .section
+        width: 660px
+        margin-left: auto
+        margin-right: auto
+        text-align: left
+        h2
+          font-size: 18px
+          font-family: "Merriweather"
+          font-weight: 400
+          margin-bottom: 10px
+        p
+          font-size: 12px
+          line-height: 20px
+          text-align: left
+          margin: 0px 0px 30px 0px 
+          padding: 0px
+          font-family: "Open Sans"
+        a 
+          color : black
+        .subsection
+          h3 
+            font-size: 15px
+            font-family: "Merriweather"
+            font-weight: 400
+            margin-bottom: 10px
+
+          p
+            margin: 0px 0px 10px 0px 
+            font-size: 12px
+
+           
 
   .hacksController
     z-index: 0
@@ -259,6 +315,13 @@ html,body
             display: inline-block
             vertical-align: top
             width: 300px
+          p.photoCredit
+            position: absolute 
+            top: 2px
+            left: 10px
+            font-size: 10px
+            color: white 
+
           .info
             display: inline-block
             vertical-align: top
