--- a/css/index.styl
+++ b/css/index.styl
@@ -238,6 +238,9 @@ html,body
       z-index: 2
       padding : 70px 100px 140px 100px
       text-align: center
+
+      a
+        font-weight: 900
       h2,h1
         font-weight: 200
         font-size: 32px
