--- a/css/index.styl
+++ b/css/index.styl
@@ -67,6 +67,8 @@ html,body
       .right
         float:right
         margin-top: 15px
+        .twitterLogo
+          width: 25px
       .nav
         font-family: "Open Sans"
         display: inline-block
@@ -75,6 +77,9 @@ html,body
         margin-right: 20px
         font-size: 12px
         text-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
+      .hackDayLogo
+        width: 45px
+
     .bottom
       background-color: lightColor
       width: 1170px
